--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pylint = "^2.6.0"
 rope = "^0.17.0"
 pyclean = "^2.0.0"
 pyinstaller = "^4.0"
+cx_Freeze = "^6.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
