--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,11 @@ graphviz = "^0.14.1"
 pymongo = "^3.11.0"
 psutil = "^5.7.2"
 pytz = "^2020.1"
+pywebview = "^3.3.4"
 
 pywin32 = { version = "^228", markers = "sys_platform == 'win32'" }
 pythonnet = { version = "^2.5.1", markers = "sys_platform == 'win32'" }
+
 
 
 
@@ -30,6 +32,7 @@ rope = "^0.17.0"
 pyclean = "^2.0.0"
 pyinstaller = "^4.0"
 cx_Freeze = "^6.2"
+setuptools = "^50.3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
