--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pylint = "^2.6.0"
 rope = "^0.17.0"
 pyclean = "^2.0.0"
 pyinstaller = "^4.0"
+invoke = "^1.4.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
