--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,10 @@ pynput = "1.6.8" # https://stackoverflow.com/questions/63681770/getting-error-wh
 graphviz = "^0.14.1"
 pymongo = "^3.11.0"
 psutil = "^5.7.2"
-pytz = "^2020.1"
 pywebview = "^3.3.4"
-
-pywin32 = { version = "^228", markers = "sys_platform == 'win32'" }
-pythonnet = { version = "^2.5.1", markers = "sys_platform == 'win32'" }
+pytz = "^2020.1"
+pywin32 = "^228"
+pythonnet = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0.2"
