--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,26 @@
-*.app
-build/
-dist/
-node_modules/
-react-ui/public/icons
-apis/input_methods/icons
-__pycache__/
-bin/
-out/
+# IDE
 .idea/
 .vscode/
+
+# Bytecode
+__pycache__/
+
+# Icons
+react-ui/public/icons
+apis/input_methods/icons
 static/icons/
 static/business_process_diagram*
 
-# Mongo folder
+# Build
+node_modules/
+*.app
+out/
+build/
+dist/
+lib/
+*.spec
+
+# MongoDB
 mongo/mongo.server.log
 mongo/db/
 
@@ -20,8 +28,5 @@ mongo/db/
 bpd
 bpd.pdf
 
-react-ui/public/icons/
+# Misc
 .DS_Store
-
-# Flair
-flair/
