Revert "Merge remote-tracking branch 'origin/mongo-cloud-api'"
This reverts commit 4b35e4bd0d482b5de6c1f1056d62ca98798916c0, reversing
changes made to c77e47a07cfa144111ef461c11c78045b182a9d5.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ static/icons/
 static/business_process_diagram*
 
 # Mongo folder
-mongo/mongo_server_log.json
+mongo/mongo.server.log
 mongo/db/
 
 # Swimlane BPD Final Files
