--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ flask_cors = "^3.0.9"
 pillow = "^7.2.0"
 pynput = "1.6.8" # https://stackoverflow.com/questions/63681770/getting-error-when-using-pynput-with-pyinstaller
 graphviz = "^0.14.1"
-pymongo = {extras = ["srv"], version = "^3.11.0"}
+pymongo = "^3.11.0"
 psutil = "^5.7.2"
 pywebview = "^3.3.4"
 pythonnet = "^2.5.1"
